2012-06-12 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/hc08/gen.c:
	  Fix cost calculation for branches.

2012-06-13 Leland Morrison <enigmalee AT sourceforge.net>

	* sdas/asz80/z80mch.c:  Allow the tst instruction for z180/.hd64 to
	  use the two operand form (tst a,X) (fixes bug #3534833)

2012-06-12 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCicode.c:
	  Fix debug output for GET_VALUE_AT_ADDRESS right operand.

2012-06-10 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCast.c (decorateType, &/|/^): optimize bool with literal,
	  (optimizeGetAbit): prevent memory leak
	* src/SDCCcse.c (algebraicOpts): optimize bool XOR literal
	* src/SDCCsymt.c (computeType): also remove const from result,
	  fixed bug 3531687 by removing wrong CHAR = ? 1 : 0 optimization to BOOL
	* src/SDCCval.h,
	* src/SDCCval.c (constBoolVal): new function
	  (cheapestVal): added BOOL for 0 or 1,
	* support/regression/tests/bug3531687.c: enabled test, removed unrelated
	  and already covered test
	* support/regression/tests/getbyte.c: new, added

2012-06-09 Borut Razem <borut.razem AT gmail.com>

	* support/regression/ports/pic14/spec.mk,
	  support/regression/ports/pic16/spec.mk: 
	  fixed pic -> pic14, --non-free -> --use-non-free

2012-06-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc:
	  Disallow source operand in h or l for >= 16-bit addition that also has a
	  source operand on extended stack. Final part of fix for bug #3531660.
	* support/regression/tests/bug3531687.c:
	  Regression test for bug #3531687.

2012-06-09 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCopt.c: fixed several missing def/use problems including 
	  bug #3511517
	* src/SDCCBBlock.c (addiCodeToeBBlock): fixed bug #3511516
	* src/hc08/ralloc.c (packRegisters): fixed bug #3531045
	* support/regression/tests/gcc-torture-execute-980604-1.c: reenabled
	* support/regression/tests/gcc-torture-execute-980205.c: reenabled
